Comentarios de las tablas de confucion

--- a/Práctica 3 - Clasificación de Textos(1).ipynb
+++ b/Práctica 3 - Clasificación de Textos(1).ipynb
@@ -928,7 +928,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Matriz de confusión se puede interpretar\n",
+    "Matriz de confusión se puede interpretar que El modelo predijo correctamente 6629 la clase 0 (comentarios negativos). Del mismo modo, este predijo que 871 fueron la clase 1 cuando realmente eran la 0, tambien 1235 eran la clase 0 cuando era 1. Por ultmo. se puede que 6265 fueron predecidos de manera incorrecta.\n",
     "</div>"
    ]
   },
@@ -1116,9 +1116,17 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Matriz de confusión se puede interpretar\n",
+    "Como se puede evaluar en esta tabla de confusión este pudo evaluar correctamente 4988 comentarios negativos (en esta caso representado por un 0), tambien podemos ver que 2512 fueron prediciones incorrectamente que la clase 0 cuando era 1. Del mismo modo, 173 fueron incorrectamente predecidos la clase 1 cuando era 0. Por ultimo, 7416 fueron predecidos de manera incorrectas.\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79fba33a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1265,8 +1273,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFE0;padding:20px;color:#000000;margin-top:10px;\">\n",
-    "Matriz de confusión se puede interpretar\n",
-    "</div>"
+    "Matriz de confusión se puede interpretar que 6234 fueron predecidos de manera correcta que en esta caso fuero los elementos 0 (o comentarios negativos), Tambien se predijeron de manera incorrecta 1266, es decir que predijo incorrectamente la clase 1 cuando era 0. Por otra parte el modelo predijo 991 de incorrectamente la clase 0 cuando era 1. Por ultimo, 6509 fueron predecidos de manera incorrecta. </div>"
    ]
   },
   {
@@ -1783,7 +1790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
